# siskiyou-manipulator

./: CMakeLists.txt  CMakeLists.txt~  README.txt  package.xml  package.xml~  readme.txt  setup.py
launch/: siskiyou.launch
msg/: siskiyouPosition.msg
scripts/: main
src/: manualControl.py  pyserialcom.py  show_devices.py  siskiyouCommands.py  siskiyouControls.py  siskiyouGUI.py  siskiyouGetPort.py  siskiyouLibrary.py  siskiyouMain.py  siskiyouPositionPublisher.py  siskiyouSerial.py  siskiyouVision.py  test.py  test2.py
