<?xml version="1.0"?>
<package>
  <name>siskiyou</name>
  <version>0.0.0</version>
  <description>Package for controlling Siskiyou Design MX7000 series micromanipulator</description>

  <maintainer email="jasoc@seas.upenn.edu">jason</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pointgrey_camera_driver</build_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>pointgrey_camera_driver</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
